# melody_extraction

./: Cargo.toml
benches/: my_benchmark.rs
notes/: salamon.markdown
output/: 0.mid  0.midi  1.mid  1.midi  2.mid  2.midi
scores/: fantasy_ballade.ly  fantasy_ballade.midi  gen.sh  scale.ly  scale.midi  variations_vagabondes.ly  variations_vagabondes.midi
scripts/: melodia.py
src/: cli.yaml  contour.rs  filter.rs  interpret.rs  lib.rs  main.rs  salience_peak.rs  select.rs  stft_peak.rs  util.rs
